# open_spiel_template

./: .gitignore  .gitmodules  CMakeLists.txt  main.cc  pixi.toml
