cmake_minimum_required(VERSION 3.27)
set($ENV{BUILD_SHARED_LIB} 1)
project(gravel LANGUAGES CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_subdirectory(open_spiel/open_spiel EXCLUDE_FROM_ALL)
find_package(absl REQUIRED)
add_executable(main main.cc)
include_directories(open_spiel)
target_link_libraries(main open_spiel absl::flags absl::flags_parse)
